--- a/web_srva/src/pages/login.html
+++ b/web_srva/src/pages/login.html
@@ -3,26 +3,95 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Login</title>
+  <title>Login Page</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-100">
-  <main class="max-w-md mx-auto p-6">
-    <h1 class="text-2xl font-bold mb-4">Login</h1>
-    <form id="loginForm" class="space-y-4">
-      <div>
-        <label for="username" class="block text-sm font-medium">Username</label>
-        <input id="username" name="username" required class="mt-1 block w-full" />
+<body class="bg-gradient-to-br from-indigo-500 via-indigo-500 to-pink-500 min-h-screen flex items-center justify-center p-4">
+  <main class="w-full max-w-md">
+    <div class="bg-white rounded-2xl shadow-2xl overflow-hidden">
+      
+      <!-- Header Section -->
+      <div class="bg-gradient-to-r from-purple-600 to-indigo-600 p-8 text-center">
+        <div class="w-20 h-20 bg-white rounded-full mx-auto mb-4 flex items-center justify-center">
+          <svg class="w-12 h-12 text-purple-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"></path>
+          </svg>
+        </div>
+        <h1 class="text-3xl font-bold text-white mb-2">Welcome Back!</h1>
+        <p class="text-purple-100">Sign in to continue</p>
       </div>
-      <div>
-        <label for="password" class="block text-sm font-medium">Password</label>
-        <input id="password" name="password" type="password" required class="mt-1 block w-full" />
+
+      <!-- Form Section -->
+      <div class="p-8">
+        <form id="loginForm" class="space-y-5">
+          <div>
+            <label for="username" class="block text-sm font-semibold text-gray-700 mb-2">Username</label>
+            <div class="relative">
+              <span class="absolute inset-y-0 left-0 flex items-center pl-3">
+                <svg class="w-5 h-5 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"></path>
+                </svg>
+              </span>
+              <input 
+                id="username" 
+                name="username" 
+                required 
+                class="w-full pl-10 pr-4 py-3 border-2 border-gray-200 rounded-lg focus:border-purple-500 focus:outline-none transition-colors"
+                placeholder="Enter your username"
+              />
+            </div>
+          </div>
+          
+          <div>
+            <label for="password" class="block text-sm font-semibold text-gray-700 mb-2">Password</label>
+            <div class="relative">
+              <span class="absolute inset-y-0 left-0 flex items-center pl-3">
+                <svg class="w-5 h-5 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 15v2m-6 4h12a2 2 0 002-2v-6a2 2 0 00-2-2H6a2 2 0 00-2 2v6a2 2 0 002 2zm10-10V7a4 4 0 00-8 0v4h8z"></path>
+                </svg>
+              </span>
+              <input 
+                id="password" 
+                name="password" 
+                type="password" 
+                required 
+                class="w-full pl-10 pr-4 py-3 border-2 border-gray-200 rounded-lg focus:border-purple-500 focus:outline-none transition-colors"
+                placeholder="Enter your password"
+              />
+            </div>
+          </div>
+
+          <div class="flex items-center justify-between text-sm">
+            <label class="flex items-center">
+              <input type="checkbox" class="w-4 h-4 text-purple-600 border-gray-300 rounded focus:ring-purple-500">
+              <span class="ml-2 text-gray-600">Remember me</span>
+            </label>
+            <a href="#" class="text-purple-600 hover:text-purple-700 font-semibold">Forgot password?</a>
+          </div>
+
+          <button 
+            type="submit" 
+            class="w-full py-3 px-4 bg-gradient-to-r from-purple-600 to-indigo-600 text-white font-bold rounded-lg hover:from-purple-700 hover:to-indigo-700 transform hover:scale-105 transition-all duration-200 shadow-lg"
+          >
+            Sign In
+          </button>
+        </form>
+
+        <p id="loginMsg" class="mt-4 text-sm text-center font-semibold"></p>
+
+        <div class="mt-6 text-center">
+          <p class="text-gray-600 text-sm">
+            Don't have an account? 
+            <a href="#" class="text-purple-600 hover:text-purple-700 font-semibold">Sign up here</a>
+          </p>
+        </div>
       </div>
-      <div>
-        <button type="submit" class="px-4 py-2 bg-blue-600 text-white rounded">Sign in</button>
-      </div>
-    </form>
-    <p id="loginMsg" class="mt-4 text-sm text-red-600"></p>
+    </div>
+
+    <!-- Footer -->
+    <div class="text-center mt-6 text-white text-sm">
+      <p>© MP Project</p>
+    </div>
   </main>
 
   <script src="../js/auth.js"></script>
