--- a/web_srva/src/pages/logout.html
+++ b/web_srva/src/pages/logout.html
@@ -3,13 +3,46 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Logged out</title>
+  <title>Log Out</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-100">
-  <main class="max-w-md mx-auto p-6">
-    <h1 class="text-2xl font-bold">You are logged out</h1>
-    <p class="mt-4"><a href="login.html" class="text-blue-600">Sign in again</a></p>
+<body class="bg-gradient-to-br from-indigo-500 via-purple-500 to-pink-500 min-h-screen flex items-center justify-center p-4">
+  <main class="w-full max-w-md">
+    <div class="bg-white rounded-2xl shadow-2xl overflow-hidden text-center p-8">
+      
+      <!-- Icon Section -->
+      <div class="mb-6">
+        <div class="w-24 h-24 bg-gradient-to-r from-purple-600 to-indigo-600 rounded-full mx-auto flex items-center justify-center mb-4">
+          <svg class="w-14 h-14 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1"></path>
+          </svg>
+        </div>
+        <div class="w-16 h-1 bg-gradient-to-r from-purple-600 to-indigo-600 rounded-full mx-auto"></div>
+      </div>
+
+      <!-- Message Section -->
+      <h1 class="text-3xl font-bold text-gray-800 mb-3">You're Logged Out</h1>
+      
+
+      <!-- Action Button -->
+      <a 
+        href="login.html" 
+        class="inline-block w-full py-3 px-6 bg-gradient-to-r from-purple-600 to-indigo-600 text-white font-bold rounded-lg hover:from-purple-700 hover:to-indigo-700 transform hover:scale-105 transition-all duration-200 shadow-lg"
+      >
+        Sign in again
+      </a>
+
+      <!-- Extra text -->
+      <div class="mt-8 pt-6 border-t border-gray-200">
+        <p class="text-sm text-gray-500 mb-4">Your session has ended.</p>
+        <div class="flex justify-center space-x-6 text-xs text-gray-400">
+      </div>
+    </div>
+
+    <!-- Footer -->
+    <div class="text-center mt-6 text-white text-sm">
+      <p>© MP Project</p>
+    </div>
   </main>
 </body>
 </html>
