--- a/web_srva/src/pages/index.html
+++ b/web_srva/src/pages/index.html
@@ -18,6 +18,7 @@
           <a href="#about" class="text-gray-700 hover:text-purple-600 font-semibold transition-colors">About</a>
           <a href="#services" class="text-gray-700 hover:text-purple-600 font-semibold transition-colors">Services</a>
           <a href="#contact" class="text-gray-700 hover:text-purple-600 font-semibold transition-colors">Contact</a>
+          <a href="./login.html" class="text-gray-700 hover:text-purple-600 font-semibold transition-colors">Login</a>
         </div>
       </div>
     </div>
@@ -26,8 +27,8 @@
   <!-- Hero Section -->
   <section id="home" class="bg-gradient-to-r from-purple-600 to-indigo-600 text-white py-20 shadow-2xl">
     <div class="max-w-6xl mx-auto px-4 text-center">
-      <h2 class="text-5xl font-bold mb-4">Welcome to WebServerA</h2>
-      <p class="text-xl mb-8">This is a simple webpage for now?!</p>
+      <h2 class="text-5xl font-bold mb-4">Welcome to WebServer A</h2>
+      <p class="text-xl mb-8">Hello World! Web Server A</p>
       <button class="bg-white text-purple-600 px-6 py-3 rounded-lg font-semibold hover:bg-gray-100 transform hover:scale-105 transition-all duration-200 shadow-lg">
         Get Started
       </button>
@@ -35,7 +36,7 @@
   </section>
 
   <!-- About Section -->
-  <section id="about" class="py-16">
+  <section id="about" class="bg-gradient-to-r from-purple-600 to-indigo-600 text-white py-20 shadow-2xl">
     <div class="max-w-6xl mx-auto px-4">
       <div class="bg-white rounded-2xl shadow-2xl p-8">
         <h2 class="text-3xl font-bold text-center mb-8 bg-gradient-to-r from-purple-600 to-indigo-600 bg-clip-text text-transparent">About Us</h2>
@@ -61,7 +62,7 @@
   </section>
 
   <!-- Services Section -->
-  <section id="services" class="py-16">
+  <section id="services" class="bg-gradient-to-r from-purple-600 to-indigo-600 text-white py-20 shadow-2xl">
     <div class="max-w-6xl mx-auto px-4">
       <h2 class="text-3xl font-bold text-center mb-12 text-white">Our Services</h2>
       <div class="grid md:grid-cols-3 gap-8">
@@ -97,7 +98,7 @@
   </section>
 
   <!-- Contact Section -->
-  <section id="contact" class="py-16">
+  <section id="contact" class="bg-gradient-to-r from-purple-600 to-indigo-600 text-white py-20 shadow-2xl">
     <div class="max-w-6xl mx-auto px-4">
       <div class="bg-white rounded-2xl shadow-2xl p-8">
         <h2 class="text-3xl font-bold text-center mb-12 bg-gradient-to-r from-purple-600 to-indigo-600 bg-clip-text text-transparent">Contact Us</h2>
