--- a/web_srvb/src/pages/index.html
+++ b/web_srvb/src/pages/index.html
@@ -5,11 +5,13 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Web Server B</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <script src="./js/config.js"></script>
+  <!-- <link rel="stylesheet" href="./style/styles.css"> -->
 </head>
 <body class="bg-gradient-to-br from-indigo-500 via-purple-500 to-pink-500 min-h-screen">
   
   <!-- Navigation Bar -->
-  <nav class="bg-white/95 backdrop-blur-sm shadow-lg">
+  <nav class="bg-white/95 backdrop-blur-sm shadow-lg sticky top-0 z-50">
     <div class="max-w-6xl mx-auto px-4 py-4">
       <div class="flex justify-between items-center">
         <h1 class="text-2xl font-bold bg-gradient-to-r from-purple-600 to-indigo-600 bg-clip-text text-transparent">WebServerB</h1>
