--- a/web_srva/src/pages/index.html
+++ b/web_srva/src/pages/index.html
@@ -9,7 +9,7 @@
 <body class="bg-gradient-to-br from-indigo-500 via-purple-500 to-pink-500 min-h-screen">
   
   <!-- Navigation Bar -->
-  <nav class="bg-white/95 backdrop-blur-sm shadow-lg">
+  <nav class="bg-white/95 backdrop-blur-sm shadow-lg sticky top-0 z-50">
     <div class="max-w-6xl mx-auto px-4 py-4">
       <div class="flex justify-between items-center">
         <h1 class="text-2xl font-bold bg-gradient-to-r from-purple-600 to-indigo-600 bg-clip-text text-transparent">WebServerA</h1>
