--- a/web_srva/src/pages/index.html
+++ b/web_srva/src/pages/index.html
@@ -238,8 +238,8 @@ Message: test
     </div>
   </footer>
 
-  <script src="../js/auth.js"></script>
-  <script src="../js/main.js"></script>
+  <script src="/js/auth.js"></script>
+  <script src="/js/main.js"></script>
   <script>
     // Simple smooth scrolling
     document.querySelectorAll('a[href^="#"]').forEach(anchor => {
