--- a/web_srva/src/pages/dashboard.html
+++ b/web_srva/src/pages/dashboard.html
@@ -14,7 +14,7 @@
     <button id="logoutBtn" class="mt-6 px-4 py-2 bg-red-500 text-white rounded">Logout</button>
   </main>
 
-  <script src="../js/auth.js"></script>
+  <script type="module" src="/js/auth.js"></script>
   <script>
     document.getElementById('logoutBtn').addEventListener('click', () => {
       window.auth.logout();
