--- a/web_srva/src/pages/login.html
+++ b/web_srva/src/pages/login.html
@@ -94,7 +94,7 @@
     </div>
   </main>
 
-  <script src="/js/auth.js"></script>
+  <script type="module" src="/js/auth.js"></script>
   <script>
     document.getElementById('loginForm').addEventListener('submit', async (e) => {
       e.preventDefault();
