--- a/web_srvb/src/pages/index.html
+++ b/web_srvb/src/pages/index.html
@@ -241,8 +241,7 @@ Message: test
     </div>
   </footer>
 
-  <script src="../js/auth.js"></script>
-  <script src="../js/main.js"></script>
+  <script type="module" src="/js/auth.js"></script>
   <script>
     // Simple smooth scrolling
     document.querySelectorAll('a[href^="#"]').forEach(anchor => {
