--- a/web_srva/src/pages/login.html
+++ b/web_srva/src/pages/login.html
@@ -386,9 +386,9 @@
           msgElement.innerHTML += '<br>Welcome, ' + data.user.username + '!';
         }
         
-        // Redirect to dashboard after 2 seconds
+        // Redirect to index after 2 seconds
         setTimeout(() => {
-          window.location.href = 'dashboard.html';
+          window.location.href = 'index.html';
         }, 2000);
       } else {
         msgElement.innerHTML += '<br><br><span style="color: #ef4444; font-weight: bold;">✗ Login failed</span>';
