--- a/proxy_configs/webserver_files_for_testing/login.html
+++ b/proxy_configs/webserver_files_for_testing/login.html
@@ -90,7 +90,7 @@
              onmouseover="this.style.backgroundColor='#f5f5f5'"
              onmouseout="this.style.backgroundColor='#ffffff'">
 
-            <img src="https://upload.wikimedia.org/wikipedia/commons/2/29/Keycloak_Logo.png" alt="Keycloak" style="width: 20px; height: 20px; margin-right: 10px;">
+            <img src="assets/keycloak_logo.png" alt="Keycloak" style="width: 20px; height: 20px; margin-right: 10px;">
             Continue with Keycloak
           </a>
 	  <a href="/index.html" class="submit-btn" style="
