--- a/web_srva/src/pages/index.html
+++ b/web_srva/src/pages/index.html
@@ -7,6 +7,20 @@
   <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
+
+  <script>
+    fetch('/oauth2/userinfo')
+      .then(response => {
+        if (response.ok) {
+          document.getElementById('loginBtn').style.display = 'none';
+          document.getElementById('logoutBtn').style.display = 'block';
+        } else {
+          document.getElementById('loginBtn').style.display = 'block';
+          document.getElementById('logoutBtn').style.display = 'none';
+        }
+      });
+  </script>
+  
   
   <!-- Navigation Bar -->
   <nav>
@@ -17,7 +31,7 @@
         <a href="#about">About</a>
         <a href="#services">Services</a>
         <a href="#contact">Contact</a>
-        <a href="./logout.html">Logout</a>
+        <a href="/oauth2/sign_out?rd=https%3A%2F%2Fauth.dev.org%2Fauth%2Frealms%2Fdev-org%2Fprotocol%2Fopenid-connect%2Flogout%3Fclient_id%3Dproxy-server%26post_logout_redirect_uri%3Dhttps%3A%2F%2Fwww.dev.org%2Flogout.html" id="logoutBtn">Logout</a>
       </div>
     </div>
   </nav>
