--- a/web_srva/src/pages/login.html
+++ b/web_srva/src/pages/login.html
@@ -72,6 +72,45 @@
           <button type="submit" class="submit-btn">
             Sign In
           </button>
+	  <div style="display: flex; align-items: center; margin: 20px 0; color: #888;">
+            <div style="flex-grow: 1; height: 1px; background-color: #ddd;"></div>
+            <span style="margin: 0 10px; font-size: 0.9rem;">OR</span>
+            <div style="flex-grow: 1; height: 1px; background-color: #ddd;"></div>
+          </div>
+
+          <a href="/oauth2/start?rd=/index.html" class="submit-btn" style="
+              background-color: #ffffff;
+              color: white;
+              border: 1px solid #ccc;
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              text-decoration: none;
+              transition: background-color 0.2s;"
+             onmouseover="this.style.backgroundColor='#f5f5f5'"
+             onmouseout="this.style.backgroundColor='#ffffff'">
+
+            <img src="assets/keycloak_logo.png" alt="Keycloak" style="width: 20px; height: 20px; margin-right: 10px;">
+            Continue with Keycloak
+          </a>
+	  <a href="/index.html" class="submit-btn" style="
+              margin-top: 10px;
+              background-color: #6c757d; 
+              color: white;
+              border: none;
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              text-decoration: none;
+              transition: background-color 0.2s;"
+              onmouseover="this.style.backgroundColor='#5a6268'"
+              onmouseout="this.style.backgroundColor='#6c757d'">
+
+            <svg viewBox="0 0 24 24" style="width: 20px; height: 20px; margin-right: 10px; fill: white;">
+                <path d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"/>
+            </svg>
+            Continue as Guest
+          </a>
         </form>
 
         <p id="loginMsg"></p>
