--- a/web_srva/src/pages/index.html
+++ b/web_srva/src/pages/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Web Server A</title>
-  <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="./css/index.css">
   <style>
     /* Inline styles for the new Chatbot File Upload features */
     .chatbot-input-wrapper {
