--- a/web_srva/src/pages/index.html
+++ b/web_srva/src/pages/index.html
@@ -58,7 +58,7 @@
           </div>
           <div class="about-image">
             <img 
-              src=".\assets\temasek_logo.png" 
+              src="./assets/temasek_logo.png"
               alt="Logo"
             >
           </div>
