--- a/web_srva/src/pages/index.html
+++ b/web_srva/src/pages/index.html
@@ -210,7 +210,7 @@
     </div>
   </div>
 
-  <script type="module" src="../js/auth.js"></script>
-  <script src="../js/index.js"></script>
+  <script type="module" src="./js/auth.js"></script>
+  <script src="./js/index.js"></script>
 </body>
 </html>
