--- a/web_srva/src/pages/index.html
+++ b/web_srva/src/pages/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-  <nav>
+    <nav>
     <div class="nav-container">
       <h1 class="nav-logo">WebServerA</h1>
       <div class="nav-links">
@@ -16,11 +16,12 @@
         <a href="#about">About</a>
         <a href="#services">Services</a>
         <a href="#contact">Contact</a>
-        <a href="login.html" id="loginBtn">Login</a>
+        <a href="login.html" id="loginBtn" style="display:none;">Login</a>
         <a href="/oauth2/sign_out?rd=https%3A%2F%2Fauth.dev.org%2Fauth%2Frealms%2Fdev-org%2Fprotocol%2Fopenid-connect%2Flogout%3Fclient_id%3Dproxy-server%26post_logout_redirect_uri%3Dhttps%3A%2F%2Fwww.dev.org%2Flogout.html" id="logoutBtn" style="display:none;">Logout</a>
       </div>
     </div>
   </nav>
+
 
   <section id="home" class="hero">
     <div class="hero-container">
