--- a/web_srva/src/pages/index.html
+++ b/web_srva/src/pages/index.html
@@ -18,6 +18,7 @@
         <a href="#services">Services</a>
         <a href="#contact">Contact</a>
         <a href="/oauth2/sign_out?rd=https%3A%2F%2Fauth.dev.org%2Fauth%2Frealms%2Fdev-org%2Fprotocol%2Fopenid-connect%2Flogout%3Fclient_id%3Dproxy-server%26post_logout_redirect_uri%3Dhttps%3A%2F%2Fwww.dev.org%2Flogout.html" id="logoutBtn">Logout</a>
+        <a href="./login.html" id="loginBtn">Login</a>
       </div>
     </div>
   </nav>
