--- a/web_srvb/src/pages/logout.html
+++ b/web_srvb/src/pages/logout.html
@@ -38,7 +38,7 @@
 
     <!-- Footer -->
     <div class="footer">
-      <p>© MP Project</p>
+      <p>Made with HTML + CSS + JS with MP Group No. 48</p>
     </div>
   </main>
 </body>
