--- a/web_srvb/src/pages/login.html
+++ b/web_srvb/src/pages/login.html
@@ -42,7 +42,7 @@
     </div>
 
     <div class="footer">
-      <p>Made with HTML + CSS + JS with MP Group No. 48</p>
+      <p>&copy; MP 2025</p>
     </div>
   </main>
 
