Uhm i swear i updated but it didnt work so i updated again

--- a/web_srva/src/pages/login.html
+++ b/web_srva/src/pages/login.html
@@ -34,7 +34,7 @@
 
         <div class="signup-section">
           <p>
-        
+            Need help accessing your account? 
             <a href="#" class="signup-link">Contact support</a>
           </p>
         </div>
@@ -42,7 +42,7 @@
     </div>
 
     <div class="footer">
-      <p>Made with HTML + CSS + JS with MP Group No. 48</p>
+      <p>© MP Project</p>
     </div>
   </main>
 
