--- a/web_srvb/src/pages/index.html
+++ b/web_srvb/src/pages/index.html
@@ -8,6 +8,8 @@
   <script src="./js/purify.min.js"></script>
 </head>
 <body>
+  <script src="./js/check_login.js"></script>
+
 
   <nav>
     <div class="nav-container">
